src/rules/snapshots/pg_migration_lint__rules__pgm011__tests__drop_pk_column_fires.snap
---
source: src/rules/pgm011.rs
expression: findings
---
- rule_id: PGM011
  severity: Major
  message: "Dropping column 'id' from table 'orders' silently removes the primary key. The table will have no row identity. Add a new primary key or reconsider the column drop."
  file: migrations/002.sql
  start_line: 1
  end_line: 1
